--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,14 +136,23 @@ a.topnav-title {
     padding: 20px;
 }
 
+.text-in {
+    padding-top: 10px;
+}
+
 .text-mt {
     /* font-family: 'Courier New', Courier, monospace; */
+    text-decoration: none;
     padding-left: 30px;
     letter-spacing: 0px;
-    display: block;
+    display: flex-box;
     color: rgb(2, 2, 2);
     padding: 5px 0px;
     font-style: none;
+}
+
+.text-mt:hover {
+    opacity: 0.8;
 }
 
 .topnav #topnav-icon {
