--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,7 @@ a.topnav-title {
     padding-top: 10px;
 }
 
-.text-mt {
+.text-mt, .location {
     /* font-family: 'Courier New', Courier, monospace; */
     text-decoration: none;
     padding-left: 30px;
@@ -149,6 +149,7 @@ a.topnav-title {
     color: rgb(2, 2, 2);
     padding: 5px 0px;
     font-style: none;
+    font-size: 19px;
 }
 
 .text-mt:hover {
